--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
+.contenedor {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-top: 60px;
+}
+
+.titulo-contenedor {
+  position: fixed;
+  top: 0;
+  z-index: 50;
+  min-width: 100%;
   text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  background-color: hsla(0, 0%, 100%, .5);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#contenedor-lista-heroes {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#listaheroes {
+  display: inline-block;
+  position: relative;
+  margin: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#imagen {
+  width: 10rem;
+  height: 14rem;
+  border-radius: 0.25rem;
+}
+
+#listaheroes ul {
+  position: absolute;
+  bottom: 4px;
+  background-color: black;
   color: white;
+  margin: 0px;
+  padding: 0px;
+  border-radius: 0.25rem;
 }
 
-.App-link {
-  color: #61dafb;
+#listaheroes h3 {
+
+  font-size: medium;
+  margin: 0px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#listaheroes p {
+  font-size: small;
+  margin: 0px;
 }
